small css adjustment, added background color to 'correct counter' div for contrast, especially on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -241,6 +241,7 @@ a {
     border: solid black 2px;
     border-radius: 5px;
     margin-right: 15px;
+    background: #ffffff99;
 }
 .correct {
     color: #4faa4f;
